After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701409 - Missing allow-none annotations in g_uri_unescape_string and g_uri_escape_string
Missing allow-none annotations in g_uri_unescape_string and g_uri_escape_string
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
2.37.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks: 701427
 
 
Reported: 2013-06-01 09:02 UTC by Arnel Borja
Modified: 2013-06-19 15:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
g_uri_unescape_string (1.47 KB, patch)
2013-06-01 09:02 UTC, Arnel Borja
none Details | Review
g_uri_escape_string (923 bytes, patch)
2013-06-01 09:03 UTC, Arnel Borja
committed Details | Review
g_uri_unescape_string (857 bytes, patch)
2013-06-10 04:41 UTC, Arnel Borja
committed Details | Review
g_uri_unescape_string: Mention (allow-none)/%NULL in documentation (905 bytes, patch)
2013-06-19 15:28 UTC, Vadim Rutkovsky
committed Details | Review
g_uri_escape_string: Add missing allow-none annotation (967 bytes, patch)
2013-06-19 15:28 UTC, Vadim Rutkovsky
committed Details | Review

Description Arnel Borja 2013-06-01 09:02:07 UTC
Well, I think the summary explains everything.
Comment 1 Arnel Borja 2013-06-01 09:02:44 UTC
Created attachment 245812 [details] [review]
g_uri_unescape_string
Comment 2 Arnel Borja 2013-06-01 09:03:39 UTC
Created attachment 245813 [details] [review]
g_uri_escape_string
Comment 3 Matthias Clasen 2013-06-08 01:35:52 UTC
Review of attachment 245813 [details] [review]:

Looks good
Comment 4 Matthias Clasen 2013-06-08 02:02:16 UTC
Review of attachment 245812 [details] [review]:

Doesn't make much sense to me to mark escaped_string as allow-none.
Comment 5 Matthias Clasen 2013-06-08 02:02:27 UTC
Review of attachment 245813 [details] [review]:

Looks good
Comment 6 Arnel Borja 2013-06-10 04:41:59 UTC
Created attachment 246376 [details] [review]
g_uri_unescape_string

Thanks for reviewing my commit.

(In reply to comment #4)
> Review of attachment 245812 [details] [review]:
> 
> Doesn't make much sense to me to mark escaped_string as allow-none.

I copied it from g_uri_unescape_segment, since it also calls that function. Removed it and related documentation for return in this new patch.
Comment 7 Matthias Clasen 2013-06-16 18:33:58 UTC
Review of attachment 246376 [details] [review]:

looks good now
Comment 8 Vadim Rutkovsky 2013-06-19 15:28:00 UTC
The following fixes have been pushed:
19e2008 g_uri_unescape_string: Mention (allow-none)/%NULL in documentation
8d29a5a g_uri_escape_string: Add missing allow-none annotation
Comment 9 Vadim Rutkovsky 2013-06-19 15:28:13 UTC
Created attachment 247267 [details] [review]
g_uri_unescape_string: Mention (allow-none)/%NULL in documentation
Comment 10 Vadim Rutkovsky 2013-06-19 15:28:17 UTC
Created attachment 247268 [details] [review]
g_uri_escape_string: Add missing allow-none annotation