g_uri_escape_string: Add missing allow-none annotation

https://bugzilla.gnome.org/show_bug.cgi?id=701409